# Calculator

./: CMakeLists.txt  Readme.txt
includes/: zapusk.h
src/: factorial.c  multiple.c  sqrt.c
tests/: multiple.cpp  multiple.test.cpp  usl.cpp
